--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   bloc: ^8.1.0
   rxdart: ^0.27.7
   hive_flutter: ^1.1.0
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
