--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   rxdart: ^0.27.7
   hive_flutter: ^1.1.0
   shared_preferences: ^2.0.17
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
