pagenation and shimmer apply on globle page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   hive_flutter: ^1.1.0
   shared_preferences: ^2.0.17
   intl: ^0.18.1
+  readmore: ^2.2.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
