--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,22 +55,32 @@ dependencies:
   animations: ^2.0.8
   persistent_bottom_nav_bar: ^5.0.2
   animated_text_kit: ^4.2.2
-  # image_picker: ^1.0.4
-  
+  showcaseview: ^2.0.3
+  lottie: ^2.6.0
 
+  # image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.1.11
   hive_generator: ^1.1.3
+  flutter_native_splash: 2.3.2
 
+  flutter_lints: ^1.0.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  
+flutter_native_splash:
+  image: assets/images/autumn-of-reading-svgrepo-com.png
+  color: "#f9f9f9"
+
+  android: true
+  ios: true
+  web: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -86,6 +96,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animation/
 
   fonts:
     - family: Roboto Black
@@ -99,11 +110,11 @@ flutter:
     - family: Roboto Bold
       fonts:
         - asset: assets/fonts/Roboto-Bold.ttf
-    
+
     - family: Roboto BoldItalic
       fonts:
         - asset: assets/fonts/Roboto-BoldItalic.ttf
-    
+
     - family: Roboto Italic
       fonts:
         - asset: assets/fonts/Roboto-Italic.ttf
